--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -22,3 +22,17 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+/* http://www.softicons.com/free-icons/system-icons/crystal-project-icons-by-everaldo-coelho/apps-bug-icon */
+.navbar-brand
+{
+    background: url( '/Images/bug.png' ) no-repeat 15px 5px;
+    padding-left: 50px;
+}
+
+
+.navbar-light {
+    background-color: #CCCCCC;
+    border-color: #CCCCCC;
+}
