--- a/CatchMe/Views/Admin/AddUser.cshtml
+++ b/CatchMe/Views/Admin/AddUser.cshtml
@@ -14,6 +14,9 @@
     <div class="form-horizontal">
         <h4>user</h4>
         <hr />
+
+
+
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -92,7 +95,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.active_project, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.active_project, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.active_project, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -120,30 +123,71 @@
 
 
             $('.typeahead').typeahead({
-                hint: true,
-                highlight: true,
                 minLength: 3,
-                limit: 8
-            }, {
-                source: function (q, cb) {
-                    return $.ajax({
-                        dataType: 'json',
-                        type: 'get',                        
-                        url: getVirtualDir() + 'Admin/FindUser?q=' + q,
-                        chache: false,
-                        success: function (data) {
-                            var result = [];
-                            $.each(data, function (index, val) {
-                                result.push({
-                                    value: val
-                                });
-                            });
-                            cb(result);
-                        }
-                    });
+                dataType: 'json',
+                //source: ['GIOLET - Amsterdam', 'ASAAAA - Amsterdam2', 'BBBBBB - Amsterdam3', 'Washington', 'Sydney', 'Beijing', 'Cairo']
+
+                source: function (q) {
+                    return $.get(getVirtualDir() + 'admin/finduser?q=' + q);               
                 }
 
+
+
             });
+
+
+            //$('.typeahead').typeahead({
+            //    minLength: 4,
+            //   source: function (q, cb) {
+            //        return $.ajax({
+            //            //dataType: 'json',
+            //            type: 'get',                        
+            //            url: getVirtualDir() + 'Admin/FindUser?q=' + q,
+            //            chache: false,
+            //            success: function (data) {
+            //                var result = [];
+            //                $.each(data, function (index, val) {
+            //                    result.push({
+            //                        value: val
+            //                    });
+            //                });
+            //                cb(result);
+            //            }
+            //        });
+            //    }
+
+            //});
+
+
+
+            //$('.typeahead').typeahead({
+            //    hint: true,
+            //    highlight: true,
+            //    minLength: 3,
+            //    limit: 8
+            //}, {
+            //    source: function (q, cb) {
+            //        return $.ajax({
+            //            dataType: 'json',
+            //            type: 'get',
+            //            url: getVirtualDir() + 'Admin/FindUser?q=' + q,
+            //            chache: false,
+            //            success: function (data) {
+            //                var result = [];
+            //                $.each(data, function (index, val) {
+            //                    result.push({
+            //                        value: val
+            //                    });
+            //                });
+            //                cb(result);
+            //            }
+            //        });
+            //    }
+
+            //});
+
+
+
 
         });
 
