--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -1,7 +1,25 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿html {
+    
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    background-color: #fff;
+    border-top: solid 10px #000;
+    color: #333;
+    
+    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
+        padding-top: 50px;
+    padding-bottom: 20px;
+
+    margin: 0;
+    
+}
+
+
+
+
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
