--- a/CatchMe/Views/Admin/AddUser.cshtml
+++ b/CatchMe/Views/Admin/AddUser.cshtml
@@ -1,13 +1,16 @@
 ﻿@model CatchMe.Models.user
+@using helpers = CatchMe.Helpers
 
 @{
     ViewBag.Title = "AddUser";
+    
+    var roles = CatchMe.Helpers.SelectItems.RoleItemList();
 }
 
 <h2>Add User</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("AddUser","Admin",FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
@@ -61,20 +64,22 @@
         <div class="form-group">
             @Html.LabelFor(model => model.role, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.DropDownList("role",roles, htmlAttributes: new { @class = "form-control" })
+
                 @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.num_logins, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.num_logins, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.num_logins, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.is_active, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -82,7 +87,7 @@
                     @Html.ValidationMessageFor(model => model.is_active, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
