--- a/CatchMe/Views/Admin/FindUser.cshtml
+++ b/CatchMe/Views/Admin/FindUser.cshtml
@@ -2,9 +2,19 @@
 
 @{
     ViewBag.Title = "FindUser";
+
+    var error = ViewBag.Error; 
 }
 
 <h2>Find and Add User</h2>
+
+@if (!string.IsNullOrWhiteSpace(error))
+{
+    <div class="alert alert-warning alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <strong>Warning!</strong> @error.
+    </div>
+}
 
 
 @using (Html.BeginForm()) 
