--- a/CatchMe/Views/Admin/ListProjects.cshtml
+++ b/CatchMe/Views/Admin/ListProjects.cshtml
@@ -38,7 +38,7 @@
             </p>
             <table class="table">
                 <tr class="grey">
-                    <th>
+                    <th style="width:30%">
                         @Html.DisplayNameFor(model => model.name) 
                     </th>
                     <th>
