--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -1,5 +1,6 @@
 ﻿@model CatchMe.Models.task
-
+@using session = CatchMe.Helpers.UserSession
+@using selectlists = CatchMe.Helpers.SelectItems
 @{
     ViewBag.Title = "Create";
 }
@@ -15,11 +16,13 @@
         <h4>task</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+        <input type="hidden" name="project_id" value="@session.Current.CurrentProjectId" />
         <div class="form-group">
             @Html.LabelFor(model => model.project_id, "project_id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.project_id, "", new { @class = "text-danger" })
+                <input type="text" value="@session.Current.CurrentProject" readonly class="form-control"/>
+                
             </div>
         </div>
 
@@ -35,6 +38,7 @@
             @Html.LabelFor(model => model.test_status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.test_status, new { htmlAttributes = new { @class = "form-control" } })
+                
                 @Html.ValidationMessageFor(model => model.test_status, "", new { @class = "text-danger" })
             </div>
         </div>
