--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <ul class="nav navbar-nav">
                     
                     <li><a href="@Url.Action("Index","Tasks")" title="Home"><span class="fa fa-home"></span> </a></li>
-                    <li><a href="@Url.Action("Create","Tasks")" title="create task"><span class="fa fa-tasks"></span> </a></li>
+                    <li><a href="@Url.Action("CreateTask","Tasks")" title="create task"><span class="fa fa-tasks"></span> </a></li>
                     <li><a href="@Url.Action("Index","Admin")" title="Admin"><span class="fa fa-wrench"></span> </a></li>                    
                 </ul>                
                 <p class="nav navbar-text navbar-right">Hello, @session.Current.Firstname!</p>
