--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -12,7 +12,7 @@
         
         }
 
-        <h2>Create</h2>
+        <h2>Create Task for [Project]</h2>
 
 
         @using (Html.BeginForm())
@@ -36,8 +36,8 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.status, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.status, new { htmlAttributes = new { @class = "form-control" } })
-                        @*@Html.DropDownListFor(model => model.status, statusList, "--", new { @class = "form-control" })*@
+                        
+                        @Html.DropDownList("status", null, new { htmlAttributes = new { @class = "form-control" } })                        
                         @Html.ValidationMessageFor(model => model.status, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -45,8 +45,8 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.test_status, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.test_status, new { htmlAttributes = new { @class = "form-control" } })
-
+                        
+                        @Html.DropDownList("test_status", null, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.test_status, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -78,7 +78,17 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.complexity, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.complexity, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.DropDownList("complexity", null, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.priority, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("complexity", null, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
                     </div>
                 </div>
