--- a/CatchMe/Views/Tasks/CreateTask.cshtml
+++ b/CatchMe/Views/Tasks/CreateTask.cshtml
@@ -62,7 +62,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.TextAreaFor(model => model.description, new { @class = "form-control" } )
                         @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.priority, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("complexity", null, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.DropDownList("priority", null, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.complexity, "", new { @class = "text-danger" })
                     </div>
                 </div>
