--- a/CatchMe/Views/Admin/ListProjects.cshtml
+++ b/CatchMe/Views/Admin/ListProjects.cshtml
@@ -115,7 +115,7 @@
                         </td>
                         
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.user_id}) |
+                            @Html.ActionLink("EditUser", "EditUser", new { id = item.user_id}) |
                             @Html.ActionLink("Details", "Details", new { id = item.user_id }) |
                             @Html.ActionLink("Delete", "Delete", new { id = item.user_id })
                         </td>
