--- a/CatchMe/Views/Admin/EditProject.cshtml
+++ b/CatchMe/Views/Admin/EditProject.cshtml
@@ -116,7 +116,7 @@
                         <tr>
                             <td>@user.username</td>
                             <td>@user.fullname</td>
-                            <td>@user.role</td>
+                            <td>@user.RoleDesc</td>
                             <td><a href="@Url.Action("RemoveUserFromProject", new  { project_id = Model.project_id, user_id = user.user_id })" onclick="return confirm('Are you sure?')">Remove</a></td>
                         </tr>
                     }
