--- a/CatchMe/Views/Admin/ListUsers.cshtml
+++ b/CatchMe/Views/Admin/ListUsers.cshtml
@@ -73,7 +73,7 @@
         </td>
         
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.user_id }) |
+            @Html.ActionLink("Edit", "EditUser", new { id=item.user_id }) |
             @Html.ActionLink("Details", "Details", new { id=item.user_id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.user_id })
         </td>
